# hostal_management

./: .env  .env.example  DEPLOYMENT_README.md  PAYMENTS_MODULE_README.md  alembic.ini  app.py  build_frontend.py  main.py  netlify.toml  pyproject.toml  render.yaml  requirements.txt  test.py  test_api.py  test_menu.py  test_upi.py
.cursor/rules/: hotelplan.mdc
agent/: config.py  embeddings.py  graph.py  graph2.py  tools.py
alembic/: env.py
alembic/versions/: 0feed92a9bbd_merge_payment_fields_and_student_id_.py  3e56402c1f19_initial.py  a1b2c3d4e5f6_drop_room_id_from_payments.py  b7c9d2e1a3f0_convert_payments_student_id_to_int_fk.py  f6d7ff381f25_consolidated_models.py  new_payment_fields.py
backend/: add_student.py  menu.py  view_students.py
chroma_db/: chroma.sqlite3
database/: db.py  hostel.db
models/: models.py  student.py  upi_settings.py
routes/: agentwardan.py  auth_routes.py  bootstrap_routes.py  menu_routes.py  payment_routes.py  payment_routes_updated.py  room_routes.py  student_routes.py  upi_routes.py
schemas/: auth.py  menu.py  payments.py  room.py  student.py  upi_settings.py
services/: menu_services.py  payment_services.py  room_services.py  student_services.py  upi_services.py
static/css/: admin.css  agent.css  base.css  components.css  dashboard.css  forms.css  mess.css  payment.css  responsive.css  student.css  styles.css
templates/: admin_payments.html  admin_upi.html  index.html  payment.html  student.html
utils/: auth.py  payment_utils.py  security.py  seed_admin.py  seed_rooms.py  update_room_prices.py  upi_config.py
(+12 files in other folders)
